--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,7 +21,6 @@
     <servlet-name>MemberFrontController</servlet-name>
     <url-pattern>*.me</url-pattern>
   </servlet-mapping>  
-  
   <!-- MemberFrontController 매핑 -->
   
   <!-- AdminGoodsFrontController 매핑 -->
@@ -36,7 +35,22 @@
   </servlet-mapping>
   <!-- AdminGoodsFrontController 매핑 -->
   
- 
+  
+  <!-- GoodsFrontController 매핑 -->
+  <servlet>
+    <servlet-name>GoodsFrontController</servlet-name>
+    <servlet-class>com.goods.action.GoodsFrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>GoodsFrontController</servlet-name>
+    <url-pattern>*.go</url-pattern>
+  </servlet-mapping>
+  <!-- GoodsFrontController 매핑 -->
+  
+  
+  
+  
   
   
   
